Add user accounts dropdown menu to nav-bar

--- a/src/index.html
+++ b/src/index.html
@@ -24,30 +24,35 @@
     </div>
     <div>
       <div class="nav-search-bar">
-        <input class="nav-search-input" type="text" placeholder="Search Recipes">
-        <!-- <div> -->
-        <!-- <input type="checkbox" name="search-by-ingredient" value="search-by-ingredient"> Search Recipes by Ingredient -->
-        <!-- </div> -->
-        <div class="dropdown header-icon">
-          <img id='header-profile-icon' class='dropdown header-icon icon' src='../assets/user-circle-regular.svg'>
-          <div class="dropdown-content">
-            <a href="#"><img class="dropdown-icons" src="../assets/utensils.svg" alt="">
-              Recipes To Cook</a>
-            <a href="#"><img class="dropdown-icons" src="../assets/star-solid.svg" alt="">
-              Favorited Recipes</a>
-            <a href="#">
-              <img class="dropdown-icons" src="../assets/bread.svg" alt="">
-              My Pantry</a>
-            <br>
-            <a href="#">
-              <img class="dropdown-icons" src="../assets/middle-finger.svg" alt="">
-              Log Out</a>
+        <div class="search-bar">
+          <input class="nav-search-input" type="text" placeholder="Search Recipes">
+          </div>
+          <div class="dropdown accounts-icon">
+            <img id='header-profile-icon' class='accounts-icon icon' src='../assets/users-solid.svg'>
+            <div class="user-accounts dropdown-content">
+
+            </div>
+          </div>
+          <div class="dropdown dropdown-header-icon hidden">
+            <img id='header-profile-icon' class='dropdown header-icon icon' src='../assets/user-circle-regular.svg'>
+            <div class="dropdown-content">
+              <a href="#"><img class="dropdown-icons" src="../assets/utensils.svg" alt="">
+                Recipes To Cook</a>
+              <a href="#"><img class="dropdown-icons" src="../assets/star-solid.svg" alt="">
+                Favorited Recipes</a>
+              <a href="#">
+                <img class="dropdown-icons" src="../assets/bread.svg" alt="">
+                My Pantry</a>
+              <br>
+              <a href="#">
+                <img class="dropdown-icons" src="../assets/middle-finger.svg" alt="">
+                Log Out</a>
+            </div>
           </div>
         </div>
-      <!-- </div>
-      <!--  loading animation spot?  -->
-      <!-- <img id='header-profile-icon' class='header-icon icon' src='../assets/user-circle-regular.svg'> -->
-    <!-- </div>  -->
+        <!--  loading animation spot?  -->
+        <!-- <img id='header-profile-icon' class='header-icon icon' src='../assets/user-circle-regular.svg'> -->
+        <!-- </div>  -->
   </header>
 
   <!-- HOME VIEW SECTION -->
@@ -78,11 +83,11 @@
             <img class="staff-pick-img one-img recipe-image" src='https://spoonacular.com/recipeImages/595736-556x370.jpg' alt="">
             <h3 class="staff-pick-title one-title">(Recipe Title)</h3>
             <div class="staff-pick-icons one-icons">
-              <img class="bookmark-icon icon" src='../assets/bookmark-regular.svg'>
-              <img class="cart-icon icon" src='../assets/basket.svg'>
-              <img class="price-icon icon" src='../assets/dollar.svg'>
+              <img class="bookmark-icon icon">
+              <img class="cart-icon icon">
+              <img class="price-icon icon">
               <div class="popularity">
-                <img class="solid-cookie-icon icon" src='../assets/cookie-solid.svg'> 60
+                <img class="solid-cookie-icon icon"> 60
               </div>
             </div>
           </div>
@@ -90,11 +95,11 @@
             <img class="staff-pick-img two-img recipe-image" src="https://spoonacular.com/recipeImages/412309-556x370.jpeg" alt="">
             <h3 class="staff-pick-title two-title">(Recipe Title)</h3>
             <div class="staff-pick-icons two-icons">
-              <img class="bookmark-icon icon" src='../assets/bookmark-regular.svg'>
-              <img class="cart-icon icon" src='../assets/basket.svg'>
-              <img class="price-icon icon" src='../assets/dollar.svg'>
+              <img class="bookmark-icon icon">
+              <img class="cart-icon icon">
+              <img class="price-icon icon">
               <div class="popularity">
-                <img class="solid-cookie-icon icon" src='../assets/cookie-solid.svg'> 60
+                <img class="solid-cookie-icon icon"> 60
               </div>
             </div>
           </div>
@@ -102,11 +107,11 @@
             <img class="staff-pick-img three-img recipe-image" src="https://spoonacular.com/recipeImages/741603-556x370.jpeg" alt="">
             <h3 class="staff-pick-title three-title">(Recipe Title)</h3>
             <div class="staff-pick-icons three-icons">
-              <img class="bookmark-icon icon" src='../assets/bookmark-regular.svg'>
-              <img class="cart-icon icon" src='../assets/basket.svg'>
-              <img class="price-icon icon" src='../assets/dollar.svg'>
+              <img class="bookmark-icon icon">
+              <img class="cart-icon icon">
+              <img class="price-icon icon">
               <div class="popularity">
-                <img class="solid-cookie-icon icon" src='../assets/cookie-solid.svg'> 60
+                <img class="solid-cookie-icon icon"> 60
               </div>
             </div>
           </div>
@@ -121,8 +126,8 @@
             <img class="users-icon icon" src='../assets/user-solid.svg'>
             <p>Anita Cox</p>
             <div class="others-sidebar-card-info-icons">
-              <img class="bookmark--solid-icon icon" src='../assets/bookmark-solid.svg'>
-              <img class="solid-cookie-icon icon" src='../assets/cookie-solid.svg'>142
+              <img class="bookmark--solid-icon icon">
+              <img class="solid-cookie-icon icon">142
             </div>
           </div>
           <div class="others-sidebar-card-image-block">
@@ -135,8 +140,8 @@
             <img class="users-icon icon" src='../assets/user-solid.svg'>
             <p>Mike Oxlong</p>
             <div class="others-sidebar-card-info-icons">
-              <img class="bookmark-solid-icon icon" src='../assets/bookmark-solid.svg'>
-              <img class="solid-cookie-icon icon" src='../assets/cookie-solid.svg'>142
+              <img class="bookmark-solid-icon icon">
+              <img class="solid-cookie-icon icon">142
             </div>
           </div>
           <div class="others-sidebar-card-image-block">
@@ -149,8 +154,8 @@
             <img class="users-icon icon" src='../assets/user-solid.svg'>
             <p>Anna Lee</p>
             <div class="others-sidebar-card-info-icons">
-              <img class="bookmark--solid-icon icon" src='../assets/bookmark-solid.svg'>
-              <img class="solid-cookie-icon icon" src='../assets/cookie-solid.svg'>142
+              <img class="bookmark--solid-icon icon">
+              <img class="solid-cookie-icon icon">142
             </div>
           </div>
           <div class="others-sidebar-card-image-block">
@@ -166,15 +171,15 @@
       <section class="recipe-left-column">
         <img class="recipe-img recipe-image" src="../assets/salmon.jpg" alt="">
         <section class="recipe-icons">
-          <img class="recipe-bookmark-icon recipe-icon" src='../assets/bookmark-regular.svg'>
-          <img class="recipe-basket-icon recipe-icon" src='../assets/basket.svg'>
+          <img class="recipe-bookmark-icon recipe-icon">
+          <img class="recipe-basket-icon recipe-icon">
           <div class="recipe-cost">
-            <img class="recipe-dollar-icon recipe-icon" src='../assets/dollar.svg'>
-            <img class="recipe-dollar-icon recipe-icon" src='../assets/dollar.svg'>
-            <img class="recipe-dollar-icon recipe-icon" src='../assets/dollar.svg'>
+            <img class="recipe-dollar-icon recipe-icon">
+            <img class="recipe-dollar-icon recipe-icon">
+            <img class="recipe-dollar-icon recipe-icon">
           </div>
           <div class="recipe-popularity">
-            <img class="recipe-solid-cookie-icon recipe-icon" src='../assets/cookie-solid.svg'>
+            <img class="recipe-solid-cookie-icon recipe-icon">
             <div class="popularity-score">56</div>
           </div>
         </section>
@@ -230,7 +235,7 @@
     <!-- USER VIEW PAGE -->
     <section class="user-view fade-in">
       <!-- User Navigation Bar  -->
-      <section class="user-navigation">
+      <!-- <section class="user-navigation">
         <a href="" target="_blank" rel="external" hreflang="en" type="text/html">
           Recipes To Cook
         </a>
@@ -246,16 +251,17 @@
             <input type="checkbox" name="search-by-ingredient" value="search-by-ingredient"> Search Recipes by Ingredient
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- MAIN USER BODY SECTION  -->
-      <section class="main-user-section">
-        <!-- Suggestions Section -->
+      <section class="main-user-body hidden">
+
+        <!-- SUGGESTIONS Section -->
         <section class="suggestions-container">
           <div class="suggestions-main-title">
             <h2>Suggestions</h2>
             <p>Based On Your:</p>
           </div>
-          <div class="suggested-recipes-to-cook-container">
+          <div class="suggested suggested-recipes-to-cook-container">
             <div class="sugessted-recipes-to-cook-title">
               Recipes To Cook
             </div>
@@ -271,7 +277,7 @@
               </a>
             </div>
           </div>
-          <div class="suggested-favorites-container">
+          <div class="suggested suggested-favorites-container">
             <div class="sugessted-favorites-title">
               Favorite Recipes
             </div>
@@ -288,47 +294,59 @@
             </div>
           </div>
         </section>
-        <!-- User 'View _____' Section -->
-        <section class="user-section to-cook-view">
-          <article class='recipe'>
-            <div class="recipe-image-block">
-              <img class='recipe-image' src="https://spoonacular.com/recipeImages/764184-556x370.jpg" alt="">
+
+        <!-- USER VIEW '____' Section -->
+        <section class="user-view-section to-cook-view">
+          <section class='recipe-container'>
+            <!-- <h3> Recipes To Cook</h3> -->
+            <div class="user-recipe-image-block">
+              <img class='user-recipe-image' src="https://spoonacular.com/recipeImages/764184-556x370.jpg" alt="">
+              <h1>Recipe Title</h1>
+            </div>
+            <div class="recipe-info-block">
+              <div class="recipe-info-icons">
+                <img class="bookmark--solid-icon icon">
+                <img class="solid-cookie-icon icon">142
+              </div>
+            </div>
+          </section>
+          <section class='recipe-container'>
+            <div class="user-recipe-image-block">
+              <img class='user-recipe-image' src="https://spoonacular.com/recipeImages/764184-556x370.jpg" alt="">
               <title>Recipe Title</title>
             </div>
             <div class="recipe-info-block">
               <div class="recipe-info-icons">
-                <img class="bookmark--solid-icon icon" src='../assets/bookmark-solid.svg'>
-                <img class="solid-cookie-icon icon" src='../assets/cookie-solid.svg'>142
-
+                <img class="bookmark--solid-icon icon">
+                <img class="solid-cookie-icon icon">142
               </div>
             </div>
-          </article>
-
-
+          </section>
           <!-- <section class="recipe">
             <img src="https://spoonacular.com/recipeImages/764184-556x370.jpg" alt="">
             <title>Recipe Title</title>
             <div class=""> -->
-
           </div>
         </section>
+        <!-- User 'Filter By' Section -->
+        <section class="user-filter-content">
+          <label for="items">Filter By</label>
+          <select id="items">
+            <option value="item-1">Date Added</option>
+            <option value="item-2">Name</option>
+            <option value="item-3">Popularity</option>
+            <option value="item-4">Cost</option>
+            <option value="item-5">Dietary</option>
+          </select>
+        </section>
       </section>
-      <section class="user-section favorites-view hidden">
+      <section class="user-view-section favorites-view hidden">
+
       </section>
-      <section class="user-section pantry-view hidden">
+      <section class="user-view-section pantry-view hidden">
+
       </section>
-    </section>
-    <!-- User 'Filter By' Section -->
-    <section class="user-filter-content">
-      <label for="items">Filter By</label>
-      <select id="items">
-        <option value="item-1">Date Added</option>
-        <option value="item-2">Name</option>
-        <option value="item-3">Popularity</option>
-        <option value="item-4">Cost</option>
-        <option value="item-5">Dietary</option>
-      </select>
-    </section>
+      <!-- </section> -->
     </section>
     <!-- </section> -->
   </main>
