Edit lines to link Class files

--- a/src/index.html
+++ b/src/index.html
@@ -333,6 +333,7 @@
         <section class="user-view-section pantry-view hidden">
 
         </section>
+
         <!-- User 'Filter By' Section -->
         <section class="user-filter-content">
           <label for="items">Filter By</label>
@@ -352,6 +353,9 @@
   <script type="text/javascript" src="../data/users.js"></script>
   <script type="text/javascript" src="../data/recipes.js"></script>
   <script type="text/javascript" src="../data/ingredients.js"></script>
+  <script type="text/javascript" src="recipe.js"></script>
+  <script type="text/javascript" src="pantry.js"></script>
+  <script type="text/javascript" src="user.js"></script>
   <script type="text/javascript" src="scripts.js"></script>
 </body>
 
