Correct spelling error

--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
               <p>Anita Cox</p>
               <div class="others-sidebar-card-info-icons">
                 <img class="bookmark--solid-icon icon">
-                <img class="solid-cookie-icon icon">142
+                <img class="recipe-solid-cookie-icon--inactive icon">142
               </div>
             </div>
             <div class="others-sidebar-card-image-block">
@@ -128,7 +128,7 @@
               <p>Mike Oxlong</p>
               <div class="others-sidebar-card-info-icons">
                 <img class="bookmark-solid-icon icon">
-                <img class="solid-cookie-icon icon">142
+                <img class="recipe-solid-cookie-icon--inactive icon">142
               </div>
             </div>
             <div class="others-sidebar-card-image-block">
@@ -142,7 +142,7 @@
             <p>Anna Lee</p>
             <div class="others-sidebar-card-info-icons">
               <img class="bookmark--solid-icon icon">
-              <img class="solid-cookie-icon icon">142
+              <img class="recipe-solid-cookie-icon--inactive icon">142
             </div>
           </div>
           <div class="others-sidebar-card-image-block">
@@ -159,7 +159,7 @@
       <section class="recipe-left-column">
         <img class="recipe-img recipe-image" src="../assets/salmon.jpg" alt="">
         <section class="recipe-icons">
-          <img class="recipe-bookmark-icon recipe-icon">
+          <img class="recipe-bookmark-icon--inactive recipe-icon">
           <img class="recipe-basket-icon recipe-icon">
           <div class="recipe-cost">
             <img class="recipe-dollar-icon recipe-icon">
@@ -167,7 +167,7 @@
             <img class="recipe-dollar-icon recipe-icon">
           </div>
           <div class="recipe-popularity">
-            <img class="recipe-solid-cookie-icon recipe-icon">
+            <img class="recipe-solid-cookie-icon--inactive recipe-icon">
             <div class="popularity-score">56</div>
           </div>
         </section>
@@ -294,7 +294,7 @@
             <div class="recipe-info-block">
               <div class="recipe-info-icons">
                 <img class="bookmark--solid-icon icon">
-                <img class="solid-cookie-icon icon">142
+                <img class="recipe-solid-cookie-icon--inactive icon">142
               </div>
             </div>
           </section>
@@ -306,7 +306,7 @@
             <div class="recipe-info-block">
               <div class="recipe-info-icons">
                 <img class="bookmark--solid-icon icon">
-                <img class="solid-cookie-icon icon">142
+                <img class="recipe-solid-cookie-icon--inactive icon">142
               </div>
             </div>
           </section>
