Rename some classes and add some wrapper elements

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <h6>IT'S-A-PIZZA</h6>
       <h1>Margheritta Pizza</h1>
     </section>
-    <img class='hero' src='../assets/pizza.jpg'>
+    <img class='hero' src='../assets/board.jpg'>
   </div>
 
   <header class='navbar'>
@@ -89,7 +89,9 @@
           </div>
         </div>
         <section class="featured-recipe">
-          <img class="featured-recipe-img recipe-image" src="../assets/salmon.jpg" alt="">
+          <div class='featured-recipe-image-wrapper'>
+            <img class="featured-recipe-img recipe-image" src="../assets/salmon.jpg" alt="">
+          </div>
           <div class="featured-recipe-info">
             <div class="featured-recipe-title">
               Salmon + Pineapple + Forks
