Remove old code, add 'icon' to classlists to access in DOM token list

--- a/src/index.html
+++ b/src/index.html
@@ -110,48 +110,6 @@
       <section class="others-sidebar">
         <h2 id='others-sidebar-title'>What Others Are Cookin'</h2>
         <div class='others-sidebar-card-container'>
-          <!-- <article class='others-sidebar-card'>
-            <div class="others-sidebar-card-info-block">
-              <img class="users-icon icon" src='../assets/user-solid.svg'>
-              <p>Anita Cox</p>
-              <div class="others-sidebar-card-info-icons">
-                <img class="bookmark--solid-icon icon">
-                <img class="recipe-solid-cookie-icon--inactive icon">142
-              </div>
-            </div>
-            <div class="others-sidebar-card-image-block">
-              <img class='others-sidebar-card-image recipe-image' src="https://spoonacular.com/recipeImages/507921-556x370.jpg" alt="">
-              <p>Schweaty Balls</p>
-            </div>
-          </article>
-          <article class='others-sidebar-card'>
-            <div class="others-sidebar-card-info-block">
-              <img class="users-icon icon" src='../assets/user-solid.svg'>
-              <p>Mike Oxlong</p>
-              <div class="others-sidebar-card-info-icons">
-                <img class="bookmark-solid-icon icon">
-                <img class="recipe-solid-cookie-icon--inactive icon">142
-              </div>
-            </div>
-            <div class="others-sidebar-card-image-block">
-              <img class='others-sidebar-card-image recipe-image' src="https://spoonacular.com/recipeImages/724018-556x370.jpg" alt="">
-              <p>Schweaty Balls</p>
-            </div>
-          </article>
-          <article class='others-sidebar-card'>
-          <div class="others-sidebar-card-info-block">
-            <img class="users-icon icon" src='../assets/user-solid.svg'>
-            <p>Anna Lee</p>
-            <div class="others-sidebar-card-info-icons">
-              <img class="bookmark--solid-icon icon">
-              <img class="recipe-solid-cookie-icon--inactive icon">142
-            </div>
-          </div>
-          <div class="others-sidebar-card-image-block">
-            <img class='others-sidebar-card-image recipe-image' src="https://spoonacular.com/recipeImages/618332-556x370.jpg" alt="">
-            <p>Schweaty Balls</p>
-          </div>
-        </article> -->
         </div>
       </section>
     </section>
@@ -161,15 +119,15 @@
       <section class="recipe-left-column">
         <img class="recipe-img recipe-image" src="../assets/salmon.jpg" alt="">
         <section class="recipe-icons">
-          <img class="recipe-bookmark-icon--inactive recipe-icon">
-          <img class="recipe-basket-icon recipe-icon">
+          <img class="recipe-bookmark-icon--inactive recipe-icon icon">
+          <img class="recipe-basket-icon--inactive recipe-icon icon">
           <div class="recipe-cost">
-            <img class="recipe-dollar-icon recipe-icon">
-            <img class="recipe-dollar-icon recipe-icon">
-            <img class="recipe-dollar-icon recipe-icon">
+            <img class="recipe-dollar-icon recipe-icon icon">
+            <img class="recipe-dollar-icon recipe-icon icon">
+            <img class="recipe-dollar-icon recipe-icon icon">
           </div>
           <div class="recipe-popularity">
-            <img class="recipe-solid-cookie-icon--inactive recipe-icon">
+            <img class="recipe-solid-cookie-icon--inactive recipe-icon icon">
             <div class="popularity-score">56</div>
           </div>
         </section>
