Add elements for formatting

--- a/src/index.html
+++ b/src/index.html
@@ -245,8 +245,8 @@
 
         <!-- USER VIEW '____' Section -->
         <section class="user-view-section to-cook-view fade-in">
-          <section class='recipe-container'>
-            <!-- <h3> Recipes To Cook</h3> -->
+          <!-- <section class='recipe-container'>
+            <h3> Recipes To Cook</h3>
             <div class="user-recipe-image-block">
               <img class='user-recipe-image' src="https://spoonacular.com/recipeImages/764184-556x370.jpg" alt="">
               <h1>Recipe Title</h1>
@@ -270,11 +270,11 @@
               </div>
             </div>
           </section>
-          <!-- <section class="recipe">
+          <section class="recipe">
             <img src="https://spoonacular.com/recipeImages/764184-556x370.jpg" alt="">
             <title>Recipe Title</title>
-            <div class=""> -->
-          </div>
+            <div class="">
+          </div> -->
         </section>
         <section class="user-view-section favorites-view hidden">
 
@@ -282,8 +282,11 @@
         <section class="user-view-section pantry-view hidden">
 
         </section>
+        <section class="user-view-section search-view hidden">
+
+        </section>
         <!-- User 'Add Item' Form Section -->
-        <section class="add-item-container">
+        <section class="add-item-container hidden">
           <form class="add-item-form">
             <h2>New Item</h2>
             <div class="form-input">
