--- a/src/index.html
+++ b/src/index.html
@@ -53,9 +53,12 @@
     </div>
     <div>
       <div class="nav-search-bar">
-        <div class="search-bar">
-          <input class="nav-search-input" type="text" placeholder="Search Recipes">
-        </div>
+        <!-- <div class="search-bar"> -->
+          <input class="search-input" type="text" placeholder="Search Recipes">
+          <!-- <div>
+            <input type="checkbox" name="search-by-ingredient" value="search-by-ingredient"> Search Recipes by Ingredient
+          </div> -->
+        <!-- </div> -->
       </div>
       <div class="dropdown accounts-icon">
         <img id='header-profile-icon' class='accounts-icon icon' src='../assets/users-solid.svg'>
@@ -82,12 +85,12 @@
   <main>
     <section class="home-view fade-in">
       <section class="home-main-content">
-        <div class="search-bar">
+        <!-- <div class="search-bar">
           <input class="search-input" type="text" placeholder="Search Recipes">
           <div>
             <input type="checkbox" name="search-by-ingredient" value="search-by-ingredient"> Search Recipes by Ingredient
           </div>
-        </div>
+        </div> -->
         <section class="featured-recipe">
           <div class='featured-recipe-image-wrapper'>
             <img class="featured-recipe-img recipe-image" src="../assets/salmon.jpg" alt="">
@@ -116,39 +119,40 @@
 
     <!-- VIEW RECIPE PAGE -->
     <section class="recipe-view hidden fade-in">
+
       <section class="recipe-left-column">
-        <img class="recipe-img recipe-image" src="../assets/salmon.jpg" alt="">
+        <!-- <img class="recipe-img recipe-image" src="../assets/salmon.jpg" alt=""> -->
         <section class="recipe-icons">
           <img class="recipe-bookmark-icon--inactive recipe-icon icon">
           <img class="recipe-basket-icon--inactive recipe-icon icon">
-          <div class="recipe-cost">
+          <!-- <div class="recipe-cost">
             <img class="recipe-dollar-icon recipe-icon icon">
             <img class="recipe-dollar-icon recipe-icon icon">
             <img class="recipe-dollar-icon recipe-icon icon">
-          </div>
-          <div class="recipe-popularity">
+          </div> -->
+          <!-- <div class="recipe-popularity">
             <img class="recipe-solid-cookie-icon--inactive recipe-icon icon">
             <div class="popularity-score">56</div>
-          </div>
+          </div> -->
         </section>
         <section class="recipe-ingredients">
           <div class="ingredient ingredient-name">
             <h2 class="ingredients-h2">Ingredients</h2>
-            <p>Ingredient 1</p>
-            <p>Ingredient 2</p>
-            <p>Ingredient 3</p>
+            <!-- <p>Ingredient 1</p> -->
+            <!-- <p>Ingredient 2</p>
+            <p>Ingredient 3</p> -->
           </div>
           <div class="ingredient ingredient-amount">
-            <h2>Amount</h2>
-            <p>2</p>
+            <h2 class='amount-h2'>Amount</h2>
+            <!-- <p>2</p>
             <p>4</p>
-            <p>6</p>
+            <p>6</p> -->
           </div>
           <div class="ingredient ingredient-cost">
-            <h2>Cost</h2>
+            <h2 class='cost-h2'>Cost</h2>
+            <!-- <p>$3.50</p>
             <p>$3.50</p>
-            <p>$3.50</p>
-            <p>$3.50</p>
+            <p>$3.50</p> -->
           </div>
         </section>
         <!-- <div class="recipe-ingredients">
@@ -167,7 +171,8 @@
         <h2 class="recipe-title">Recipe Title</h2>
         <p class="recipe-details">Short blurb of what it is. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. </p>
         <p class="recipe-instructions recipe-instructions-title">Instructions:<br>
-        <p class="recipe-instructions recipe-instructions-step"><br>1. take the things and cook them to their own liking. más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos
+          <!-- <div class="recipe-instructions-list"> -->
+        <!-- <p class="recipe-instructions recipe-instructions-step"><br>1. take the things and cook them to their own liking. más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos
           hacen parecerlo un español que se puede leer. Muchos
           paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqued<br></p>
         <p class="recipe-instructions recipe-instructions-step"><br>2. maybe let the thing rest. más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español
@@ -175,9 +180,11 @@
           editores de páginas web<br></p>
         <p class="recipe-instructions recipe-instructions-step"><br>3. eat the thing on your favorite plate.más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo
           un español que se puede leer. Muchos paquetes de
-          autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqued</p>
+          autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqued</p> -->
+        <!-- </div> -->
         </p>
       </section>
+
     </section>
 
     <!-- USER VIEW PAGE -->
@@ -282,9 +289,6 @@
         <section class="user-view-section pantry-view hidden">
 
         </section>
-        <section class="user-view-section search-view hidden">
-
-        </section>
         <!-- User 'Add Item' Form Section -->
         <section class="add-item-container hidden">
           <form class="add-item-form">
@@ -326,6 +330,8 @@
         </section>
       </section>
       <!-- </section> -->
+    </section>
+    <section class="search-view fade-in hidden">
     </section>
     <!-- </section> -->
   </main>
